--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" href="/public/faviconSello.ico" type="image/png">
+    <title>El Archivo de Paula</title>
+    <meta name="description" content="Descubre y descarga libros en PDF, EPUB o lee online. El Archivo de Paula es tu biblioteca personal de tesoros literarios." />
+    <meta name="author" content="Paula" />
+    <meta name="keywords" content="libros, biblioteca, PDF, EPUB, leer online, literatura, español" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="El Archivo de Paula - Tu Biblioteca Personal" />
+    <meta property="og:description" content="Descubre y descarga libros en PDF, EPUB o lee online. Tu biblioteca personal de tesoros literarios." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
