--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/public/faviconSello.ico" type="image/png">
     <title>El Archivo de Paula</title>
     <meta name="description" content="Descubre y descarga libros en PDF, EPUB o lee online. El Archivo de Paula es tu biblioteca personal de tesoros literarios." />
